--- a/src/components/Redesign/LandingPage.astro
+++ b/src/components/Redesign/LandingPage.astro
@@ -27,7 +27,7 @@ import Footer from './LandingSections/Footer/Footer.astro'
 			<p class='mb-8'>
 				Learning resources, carefully selected, verified, up to date
 			</p>
-			<DocsButton />
+			<DocsButton href='/introduction'>Start Learning</DocsButton>
 		</div>
 		<div class='grow-1 flex items-center justify-center w-full'>
 			<img class='max-h-[500px]' src='/images/promo/wavy-edu.svg' alt='' />
@@ -44,7 +44,7 @@ import Footer from './LandingSections/Footer/Footer.astro'
 				/>
 			</div>
 			<div class='grow-1 w-full'>
-				<h2 id="about-us" class='scroll-mt-44 text-3xl font-[600] mb-5'>
+				<h2 id='about-us' class='scroll-mt-44 text-3xl font-[600] mb-5'>
 					<span class='text-xl block'>What is</span>
 					<span class='gradient-text'>bewebdev.tech</span> all about?
 				</h2>
