--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -1,4 +1,5 @@
 ---
+import DocsButton from '../../Redesign/LandingElements/DocsButton.astro'
 import GlowText from '../../common/GlowText.astro'
 import DocsBtn from '../DocsBtn.astro'
 const YOUTUBE_CHANNEL_ID = 'UUww1wSWy6LvZjyEEHr7ypLA'
@@ -77,19 +78,9 @@ const getLatestVideoLink = (index: number) => {
 			and new ways to write code for both parties - code reviewer and code
 			writer
 		</p>
-		<div class='relative w-fit h-fit group'>
-			<div
-				class='bg-gradient-to-r from-grad-start to-grad-end absolute left-0 top-0 w-full h-full group-hover:opacity-50 transition-opacity opacity-0 scale-125 pointer-events-none blur-md rounded-full duration-700 saturate-200 brightness-125'
-			>
-			</div>
-			<a
-				class='transition ease-out group relative block bg-gradient-to-r from-grad-start to-grad-end py-3 px-8 rounded-md text-white font-bold hover:scale-110'
-				href={CHANNEL_SUBSCRIBE_LINK}
-				><span class='ease-out group-hover:scale-90 block transition'
-					>Visit our channel</span
-				></a
-			>
-		</div>
+		<DocsButton href={CHANNEL_SUBSCRIBE_LINK}>
+			Visit our YouTube channel
+		</DocsButton>
 	</div>
 </div>
 <div class='flex gap-4 lg:gap-8 xl:gap-14 flex-wrap w-full'>
