--- a/src/components/Redesign/LandingSections/FAQ.astro
+++ b/src/components/Redesign/LandingSections/FAQ.astro
@@ -36,14 +36,16 @@ const questions = [
 ---
 
 <LandingSection className='mb-28 relative'>
-	<h2 id="faq" class='text-3xl font-medium mb-5 scroll-mt-44'>Frequently Asked Questions</h2>
+	<h2 id='faq' class='text-3xl font-medium mb-5 scroll-mt-44'>
+		Frequently Asked Questions
+	</h2>
 	<AccordionFAQ client:visible items={questions} />
 	<div
 		class='bg-theme-accent-primary/10 w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-full -translate-x-1/2 -translate-y-1/2 blur-[200px]'
 	>
 	</div>
 	<div
-		class='bg-theme-accent-secondary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-full top-full -translate-x-1/2 -translate-y-1/2 blur-[200px] opacity-10'
+		class='bg-theme-accent-secondary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-full top-full -translate-x-1/2 -translate-y-1/2 blur-[200px] opacity-10 inline-block'
 	>
 	</div>
 </LandingSection>
