Adjust docs button animation

--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -36,12 +36,6 @@ const getLatestVideoLink = (index: number) => {
 		margin-bottom: 1rem;
 	}
 
-	.description {
-		max-width: 600px;
-		color: var(--theme-text);
-		margin-bottom: 0.8rem;
-	}
-
 	.videos-wrapper {
 		width: 100%;
 		display: flex;
@@ -73,7 +67,7 @@ const getLatestVideoLink = (index: number) => {
 		<h2 class='text-3xl font-bold mb-4'>
 			We record <span class='gradient-text'>code reviews</span>
 		</h2>
-		<p class='description'>
+		<p class='mb-5'>
 			We believe that code review can be the best way to learn best practices
 			and new ways to write code for both parties - code reviewer and code
 			writer
