--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -1,6 +1,5 @@
 ---
 import { SIDEBAR } from '../../config'
-import GlowText from '../common/GlowText.astro'
 
 type Props = {
 	currentPage: string
@@ -24,22 +23,13 @@ const currentPageMatch = currentPage.endsWith('/')
 								const url = Astro.site?.pathname + child.link
 								const isCurrentPage = currentPageMatch === child.link
 
-								if (isCurrentPage) {
-									return (
-										<li class='nav-link'>
-											<a
-												href={url}
-												aria-current={isCurrentPage ? 'page' : false}
-											>
-												<GlowText>{child.text}</GlowText>
-											</a>
-										</li>
-									)
-								}
-
 								return (
-									<li class='nav-link'>
-										<a href={url} aria-current={isCurrentPage ? 'page' : false}>
+									<li class=`mr-5 ${isCurrentPage ? 'bg-basetext/90' : 'hover:bg-basetext/10 '}`>
+										<a
+											class=`block text-lg px-4 py-2 border-b-2 border-b-basetext/10 ${isCurrentPage ? 'font-extrabold gradient-text' : ''}`
+											href={url}
+											aria-current={isCurrentPage ? 'page' : false}
+										>
 											{child.text}
 										</a>
 									</li>
@@ -55,7 +45,7 @@ const currentPageMatch = currentPage.endsWith('/')
 
 <script is:inline>
 window.addEventListener('DOMContentLoaded', () => {
-const target = document.querySelector('[aria-current="page"]')
+	const target = document.querySelector('[aria-current="page"]')
 
 	if (target && target.offsetTop > window.innerHeight - 100) {
 		document.querySelector('.nav-groups').scrollTop = target.offsetTop
@@ -66,7 +56,8 @@ const target = document.querySelector('[aria-current="page"]')
 <style>
 	.title {
 		font-size: 1.2rem;
-		font-weight: normal;
+		font-weight: bold;
+		margin-bottom: .6rem;
 	}
 
 	.nav-groups li:not(:first-child) .title {
@@ -106,20 +97,6 @@ const target = document.querySelector('[aria-current="page"]')
 		padding: 0.1rem 1rem;
 		text-transform: uppercase;
 		margin-bottom: 0.5rem;
-	}
-
-	.nav-link a {
-		font-size: 1rem;
-		margin-bottom: 10px;
-		padding: 0.7rem 1rem;
-		font: inherit;
-		color: inherit;
-		text-decoration: none;
-		display: block;
-		border-radius: 1rem;
-		width: calc(100% - 10px);
-		border: 1px solid var(--sidebar-item-hover);
-		text-align: center;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
