--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -15,7 +15,7 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 	{
 		editHref && (
 			<li class={`heading-link`}>
-				<a class='edit-on-github' href={editHref} target='_blank'>
+				<a class='flex gap-4' href={editHref} target='_blank'>
 					<svg
 						aria-hidden='true'
 						focusable='false'
@@ -40,31 +40,37 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 	}
 	{
 		CONFIG.COMMUNITY_INVITE_URL && (
-			<li class={`heading-link`}>
-				<a href={CONFIG.COMMUNITY_INVITE_URL} target='_blank'>
-					<svg
-						aria-hidden='true'
-						focusable='false'
-						data-prefix='fas'
-						data-icon='comment-alt'
-						class='svg-inline--fa fa-comment-alt fa-w-16'
-						role='img'
-						xmlns='http://www.w3.org/2000/svg'
-						viewBox='0 0 512 512'
-						height='1em'
-						width='1em'
+			<>
+				<li class='flex'>
+					<a
+						class='flex gap-4'
+						href={CONFIG.COMMUNITY_INVITE_URL}
+						target='_blank'
 					>
-						<path
-							fill='currentColor'
-							d='M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 9.8 11.2 15.5 19.1 9.7L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64z'
-						/>
-					</svg>
-					<span>Contribute to the project</span>
-				</a>
+						<svg
+							aria-hidden='true'
+							focusable='false'
+							data-prefix='fas'
+							data-icon='comment-alt'
+							class='svg-inline--fa fa-comment-alt fa-w-16'
+							role='img'
+							xmlns='http://www.w3.org/2000/svg'
+							viewBox='0 0 512 512'
+							height='1em'
+							width='1em'
+						>
+							<path
+								fill='currentColor'
+								d='M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 9.8 11.2 15.5 19.1 9.7L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64z'
+							/>
+						</svg>
+						<span>Contribute to the project</span>
+					</a>
 				</li>
 				<li class={`heading-link git-btn`}>
 					<GitHubStarLink />
 				</li>
+			</>
 		)
 	}
 </ul>
