--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,5 @@
 ---
 import type { MarkdownHeading } from 'astro'
-import Footer from '../components/Footer/Footer.astro'
 import HeadCommon from '../components/HeadCommon.astro'
 import Header from '../components/Header/Header.astro'
 import HeadSEO from '../components/HeadSEO.astro'
@@ -12,9 +11,10 @@ import CopyCodeToClipboard from '../components/utility/CopyCodeToClipboard/CopyC
 import HeadingLinksCopyToClipboard from '../components/utility/HeadingLinksCopyToClipboard/HeadingLinksCopyToClipboard.astro'
 import ArticleUpdateDate from '../components/ArticleUpdateDate/ArticleUpdateDate'
 
-import '../styles/docs.css'
+import '../styles/docs.scss'
 
 import * as CONFIG from '../config'
+import Footer from '../components/Redesign/LandingSections/Footer/Footer.astro'
 
 type Props = {
 	frontmatter: CONFIG.Frontmatter
@@ -105,7 +105,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 
 			@media (min-width: 72em) {
 				.layout {
-					grid-template-columns: 20rem minmax(0, var(--safe-max-width)) 18rem;
+					grid-template-columns: 20rem minmax(0, 1920px) 18rem;
 					padding-left: 0;
 					padding-right: 0;
 					margin: 0 auto;
@@ -124,74 +124,76 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			}
 
 			.main-section {
-				@keyframes fadeInDown {
-					0% {
-						opacity: 0;
-						transform: translateY(-1.25em);
-					}
-					100% {
-						opacity: 1;
-						transform: translateY(0);
-					}
-				}
-				details[open] {
-					animation-name: fadeInDown;
-					animation-duration: 0.5s;
-				}
-				details {
-					summary {
-						padding: 10px;
-						border-radius: 8px;
-
-						@media (prefers-reduced-motion: no-preference) {
-							transition: 0.2s;
+				article {
+					@keyframes fadeInDown {
+						0% {
+							opacity: 0;
+							transform: translateY(-1.25em);
 						}
-
-						user-select: none;
-						&:hover {
-							background-color: var(--theme-text-accent);
-							color: var(--theme-bg);
-							cursor: pointer;
+						100% {
+							opacity: 1;
+							transform: translateY(0);
 						}
 					}
-
-					&[open] {
+					details[open] {
+						animation-name: fadeInDown;
+						animation-duration: 0.5s;
+					}
+					details {
 						summary {
-							margin-bottom: 10px;
-						}
-					}
-				}
-				a:visited {
-					color: var(--theme-text-accent-visited);
-				}
-				ul {
-					list-style: none !important;
-					padding: 0;
-					li {
-						li {
-							padding-left: 0.5rem;
-							margin-bottom: 0;
-							&::before {
-								content: '- ';
-							}
-						}
-						a {
-							text-decoration: none;
-							padding: 5px 0;
+							padding: 10px;
+							border-radius: 8px;
 
 							@media (prefers-reduced-motion: no-preference) {
 								transition: 0.2s;
 							}
 
+							user-select: none;
 							&:hover {
-								color: var(--theme-accent);
-							}
-
-							&::before {
-								content: '🔗 ';
+								background-color: var(--theme-text-accent);
+								color: var(--theme-bg);
+								cursor: pointer;
 							}
 						}
-						margin-bottom: 1.6rem;
+
+						&[open] {
+							summary {
+								margin-bottom: 10px;
+							}
+						}
+					}
+					a:visited {
+						color: var(--theme-text-accent-visited);
+					}
+					ul {
+						list-style: none !important;
+						padding: 0;
+						li {
+							li {
+								padding-left: 0.5rem;
+								margin-bottom: 0;
+								&::before {
+									content: '- ';
+								}
+							}
+							a {
+								text-decoration: none;
+								padding: 5px 0;
+
+								@media (prefers-reduced-motion: no-preference) {
+									transition: 0.2s;
+								}
+
+								&:hover {
+									color: var(--theme-accent);
+								}
+
+								&::before {
+									content: '🔗 ';
+								}
+							}
+							margin-bottom: 1.6rem;
+						}
 					}
 				}
 			}
@@ -243,7 +245,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 				<RightSidebar headings={headings} githubEditUrl={githubEditUrl} />
 			</aside>
 		</main>
-		<Footer path={currentFile} />
+		<Footer />
 		<CopyCodeToClipboard />
 		<HeadingLinksCopyToClipboard />
 	</body>
