--- a/src/styles/themes/tailwind.css
+++ b/src/styles/themes/tailwind.css
@@ -7,6 +7,7 @@
 		--color-text-base: 255, 255, 255;
 		--color-text-muted: 176, 171, 177;
 		--color-text-inverted: 79, 70, 229;
+		--color-link: 190, 190, 255;
 		--color-bg-base: 20, 7, 26;
 		--color-bg-elevated: 88, 37, 112;
 		--color-accent-primary: 237, 189, 66;
@@ -23,6 +24,7 @@
 		--color-text-base: 0, 0, 0;
 		--color-text-muted: 50, 50, 50;
 		--color-text-inverted: 220, 38, 38;
+		--color-link: 0, 0, 190;
 		--color-bg-base: 255, 255, 255;
 		--color-bg-elevated: 200, 200, 200;
 		--color-accent-primary: 198, 86, 253;
@@ -39,6 +41,7 @@
 		--color-text-base: 255, 255, 255;
 		--color-text-muted: 190, 190, 190;
 		--color-text-inverted: 235, 250, 204;
+		--color-link: 190, 90, 255;
 		--color-bg-base: 0, 0, 0;
 		--color-bg-elevated: 30, 30, 30;
 		--color-accent-primary: 237, 189, 66;
