--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -11,24 +11,9 @@ type Props = {
 const { headings, githubEditUrl } = Astro.props as Props
 ---
 
-<nav class='sidebar-nav' aria-labelledby='grid-right'>
-	<div class='sidebar-nav-inner'>
+<nav class='w-full sticky top-0' aria-labelledby='grid-right'>
+	<div class='h-full overflow-auto'>
 		<TableOfContents client:media='(min-width: 50em)' headings={headings} />
 		<MoreMenu editHref={githubEditUrl} />
 	</div>
 </nav>
-
-<style>
-	.sidebar-nav {
-		width: 100%;
-		position: sticky;
-		top: 0;
-	}
-
-	.sidebar-nav-inner {
-		height: 100%;
-		padding: 0;
-		padding-top: var(--doc-padding);
-		overflow: auto;
-	}
-</style>
