--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -212,7 +212,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 
 	<body>
 		<Header currentPage={currentPage} />
-		<main class='flex w-full max-w-7xl px-8 m-auto items-start'>
+		<main class='flex w-full max-w-7xl px-8 m-auto items-baseline'>
 			<aside
 				id='grid-left'
 				class='sticky top-0 h-screen grid-cols-1 flex'
