Feat header logo style

--- a/src/components/Header/AstroLogo.astro
+++ b/src/components/Header/AstroLogo.astro
@@ -1,3 +1,7 @@
+---
+const { size = 50 } = Astro.props as { size?: number }
+---
+
 <style>
 	img {
 		border-radius: 50%;
@@ -7,6 +11,7 @@
 </style>
 
 <img
+	style=`width: ${size}px;`
 	alt='bewebdev logo - computer backlit with pink color'
 	src='/images/nukp-logo.webp'
 />
