--- a/src/components/Redesign/LandingSections/FAQ.astro
+++ b/src/components/Redesign/LandingSections/FAQ.astro
@@ -45,7 +45,7 @@ const questions = [
 	>
 	</div>
 	<div
-		class='bg-theme-accent-secondary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-full top-full -translate-x-1/2 -translate-y-1/2 blur-[200px] opacity-10 inline-block'
+		class='hidden lg:inline-block bg-theme-accent-secondary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-full top-full -translate-x-full -translate-y-full 3xl:-translate-x-1/2 2xl:-translate-y-1/2 blur-[200px] opacity-10'
 	>
 	</div>
 </LandingSection>
