Update logo of bewebdev

--- a/src/components/Header/AstroLogo.astro
+++ b/src/components/Header/AstroLogo.astro
@@ -13,5 +13,5 @@ const { size = 50 } = Astro.props as { size?: number }
 <img
 	style=`width: ${size}px;`
 	alt='bewebdev logo - computer backlit with pink color'
-	src='/images/nukp-logo.webp'
+	src='/images/logo.svg'
 />
