--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -39,7 +39,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		<div class='flex-grow flex'>
 			<a class='flex gap-3 items-center' href='/'>
 				<AstroLogo size={40} />
-				<div class='gradient-text font-extrabold text-lg'>
+				<div class='font-extrabold text-lg text-theme-base'>
 					{
 						currentPageIsRoot && (
 							<h1 class='title-main'>{CONFIG.SITE.title ?? 'Documentation'}</h1>
