--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -219,7 +219,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			>
 				<LeftSidebar currentPage={currentPage} />
 			</aside>
-			<div id='grid-main'>
+			<div class='flex-grow' id='grid-main'>
 				<PageContent
 					frontmatter={frontmatter}
 					headings={headings}
