--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -49,7 +49,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 			)
 		}
 		<div class='flex-grow flex'>
-			<a class='flex gap-3 items-center' href='/'>
+			<a class='flex gap-3 items-center font-serious' href='/'>
 				<AstroLogo size={40} />
 				<div class='font-extrabold text-lg text-theme-base'>
 					{
