--- a/src/components/Redesign/LandingPage.astro
+++ b/src/components/Redesign/LandingPage.astro
@@ -9,7 +9,7 @@ import Footer from './LandingSections/Footer/Footer.astro'
 import AboutUs from './LandingSections/AboutUs.astro'
 ---
 
-<body class='bg-theme-base overflow-x-clip'>
+<body class='bg-theme-base overflow-x-clip font-sans'>
 	<LandingSection
 		className='pt-14 xl:pt-8 mb-16 flex gap-28 relative items-center'
 	>
