Change footer font to inter

--- a/src/components/Redesign/LandingSections/Footer/Footer.astro
+++ b/src/components/Redesign/LandingSections/Footer/Footer.astro
@@ -4,11 +4,11 @@ import TopFooterSection from './TopFooterSection.astro'
 import BottomFooterSection from './BottomFooterSection.astro'
 ---
 
-<div class='bg-theme-base relative z-[51] min-h-[300px]'>
-  <LandingSection className='py-8'>
-    <footer>
-      <TopFooterSection/>
-      <BottomFooterSection/> 
-    </footer>
-  </LandingSection>
+<div class='bg-theme-base relative z-[51] min-h-[300px] font-serious'>
+	<LandingSection className='py-8'>
+		<footer>
+			<TopFooterSection />
+			<BottomFooterSection />
+		</footer>
+	</LandingSection>
 </div>
