FIx navbar wrong behavior on safari

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -34,7 +34,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 
 <header
 	id='main-header-top'
-	class='z-[4000] py-8 w-full flex items-center justify-center overflow-hidden sticky top-0 backdrop-blur transition-colors'
+	class='z-[4000] py-8 w-full flex items-center justify-center overflow-hidden fixed top-0 backdrop-blur transition-colors'
 >
 	<SkipToContent />
 	<nav
