--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -209,7 +209,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 		</style>
 	</head>
 
-	<body>
+	<body class="pt-20">
 		<Header currentPage={currentPage} />
 		<main class='flex w-full max-w-7xl px-8 m-auto items-start'>
 			<aside
