--- a/src/components/Redesign/LandingElements/DocsButton.astro
+++ b/src/components/Redesign/LandingElements/DocsButton.astro
@@ -2,30 +2,9 @@
 const { href } = Astro.props as { href: string }
 ---
 
-<style>
-	.background-animate {
-		background-size: 50%;
-
-		animation: slide 3s linear infinite;
-	}
-
-	@keyframes slide {
-		0% {
-			background-position: 0% 50%;
-		}
-		100% {
-			background-position: 100% 50%;
-		}
-	}
-
-	a::before {
-		content: '' !important;
-	}
-</style>
-
 <div class='relative w-fit h-fit group'>
 	<div
-		class='motion-safe:background-animate motion-safe:background-animate bg-gradient-to-r to-grad-start from-grad-end absolute left-0 top-0 w-full h-full group-hover:opacity-50 motion-safe:transition-opacity opacity-0 scale-y-125 scale-x-110 pointer-events-none rounded-md duration-700 motion-reduce:duration-0 saturate-200 brightness-125 blur'
+		class='bg-gradient-to-r to-grad-start from-grad-end absolute left-0 top-0 w-full h-full group-hover:opacity-50 motion-safe:transition-opacity opacity-0 scale-y-125 scale-x-110 pointer-events-none rounded-md duration-700 motion-reduce:duration-0 saturate-200 brightness-125 blur'
 	>
 	</div>
 	<a
