Docs ui center and allow bigger screens

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -43,7 +43,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 	>
 		{
 			!currentPageIsRoot && (
-				<div class='menu-toggle'>
+				<div class='desktop-ui:hidden block'>
 					<SidebarToggle client:idle />
 				</div>
 			)
