--- a/src/components/Redesign/LandingSection.astro
+++ b/src/components/Redesign/LandingSection.astro
@@ -1,10 +1,11 @@
 ---
 type Props = {
 	className?: string
+	maxWidth?: string
 }
-const { className } = Astro.props as Props
+const { className = '', maxWidth = 'max-w-7xl' } = Astro.props as Props
 ---
 
-<section class=`w-full max-w-7xl px-8 m-auto ${className}`>
+<section class=`w-full ${maxWidth} px-8 m-auto ${className}`>
 	<slot />
 </section>
