--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -209,9 +209,9 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 		</style>
 	</head>
 
-	<body class="pt-20">
+	<body class='pt-20'>
 		<Header currentPage={currentPage} />
-		<main class='flex w-full max-w-7xl px-8 m-auto items-start'>
+		<main class='flex w-full max-w-docs px-8 m-auto items-start'>
 			<aside
 				id='grid-left'
 				class='sticky top-0 h-screen grid-cols-1 flex'
@@ -219,7 +219,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			>
 				<LeftSidebar currentPage={currentPage} />
 			</aside>
-			<div class='flex-grow' id='grid-main'>
+			<div class='max-w-6xl mx-auto w-fit' id='grid-main'>
 				<PageContent
 					frontmatter={frontmatter}
 					headings={headings}
@@ -234,7 +234,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 				<RightSidebar headings={headings} githubEditUrl={githubEditUrl} />
 			</aside>
 		</main>
-		<Footer />
+		<Footer isDocs />
 		<CopyCodeToClipboard />
 		<HeadingLinksCopyToClipboard />
 	</body>
