--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -50,7 +50,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 				</div>
 			)
 		}
-		<div class='flex-grow flex'>
+		<div class='flex-grow flex mr-3'>
 			<a class='flex gap-3 items-center font-serious' href='/'>
 				<AstroLogo size={40} />
 				<div class='hidden sm:block font-extrabold text-lg text-theme-base'>
