Adjust padding top on mobile on landing page

--- a/src/components/Redesign/LandingPage.astro
+++ b/src/components/Redesign/LandingPage.astro
@@ -11,7 +11,7 @@ import AboutUs from './LandingSections/AboutUs.astro'
 
 <body class='bg-theme-base overflow-x-clip font-sans'>
 	<LandingSection
-		className='pt-14 xl:pt-8 mb-16 flex gap-28 relative items-center'
+		className='pt-28 lg:pt-20 xl:pt-8 mb-16 flex gap-28 relative items-center'
 	>
 		<div
 			class='-z-10 bg-theme-accent-primary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-1/2 -translate-x-1/2 -translate-y-1/2 opacity-10 blur-[200px]'
